--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             
         </div>
         <div class="footer-rights">
-            Copyright &#169;https://aryanjaisw.github.io/aryanportfolio/ | ALL rights reserved
+            Copyright &#169;https://aryanjaisw.github.io/aryanportfolio | ALL rights reserved
         </div>
        
 
